--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the Sample HTML Page</h1>
+        <h1>Welcome to the Sample HTML Page!</h1>
     </header>
     <main>
         <p>This is a simple HTML page structure with linked CSS and JavaScript files.</p>
